# turtle_demo

./: .gitignore  .gitmodules  LICENSE  README.md  turtle_active.csv  turtle_active_control.csv  turtle_auto.csv  turtle_auto_control.csv
dynamic_selector/: CMakeLists.txt  decision_module.h  ds_test.cpp  dynamic_selector.cpp  dynamic_selector.h  smart_input_node.h  test_tree.xml
dynamic_selector/include/: decision_module.h  dynamic_selector.h  input_data_node.h  learning_node.h  smart_input_node.h
dynamic_selector/src/: decision_module.cpp  dynamic_selector.cpp  input_data_node.cpp  smart_input_node.cpp
groot/: ds_example.btproj  ds_example_tree.xml  slideshow_tree.xml  turtle_tree.btproj  turtle_tree_groot.xml
smart_selector/: decision_module.h  learning_node.h  smart_input_node.h  smart_selector.cpp  smart_selector.h
turtle_behaviors/include/turtle_behaviors/: consume_energy.hpp  find_corner.hpp  go_to_point.hpp  predict_pose.hpp  scan_search.hpp  vector_to_msg.hpp
turtle_behaviors/src/: go_to_point.cpp  patrol_search.cpp  scan_search.cpp
turtle_demo/: package.xml
turtle_demo/behavior_trees/: control_tree.xml  turtle_tree.xml
turtle_demo/launch/: turtle_demo_active_launch.py  turtle_demo_auto_control_launch.py  turtle_demo_auto_launch.py
turtle_demo/src/: turtle_BT.cpp  turtle_monitor.cpp  turtle_service_handler.cpp
turtle_ws/: README.md
turtle_ws/src/dynamic_selector_ros2/: CMakeLists.txt  package.xml
turtle_ws/src/dynamic_selector_ros2/behavior_trees/: test_tree.xml
turtle_ws/src/dynamic_selector_ros2/include/dynamic_selector_ros2/: decision_module.h  dynamic_selector.h  input_data_node.h  learning_node.h  smart_input_node.h
turtle_ws/src/dynamic_selector_ros2/src/: decision_module.cpp  ds_test.cpp  dynamic_selector.cpp  input_data_node.cpp  smart_input_node.cpp
turtle_ws/src/turtle_behaviors/: CMakeLists.txt  package.xml
turtle_ws/src/turtle_behaviors/include/turtle_behaviors/: are_poses_equal.hpp  chase_target.hpp  consume_energy.hpp  find_corner.hpp  go_to_point.hpp  patrol_search.hpp  predict_pose.hpp  recharge_energy.hpp  relative_angle_positive.hpp  scan_search.hpp  stop_turtle.hpp  target_within_range.hpp  turtle_behaviors.hpp  vector_to_msg.hpp
turtle_ws/src/turtle_behaviors/src/: chase_target.cpp  go_to_point.cpp  patrol_search.cpp  recharge_energy.cpp  scan_search.cpp  target_within_range.cpp
turtle_ws/src/turtle_demo/: CMakeLists.txt  package.xml
turtle_ws/src/turtle_demo/behavior_trees/: control_tree.xml  turtle_test_tree.xml  turtle_tree.xml  turtle_tree_predictive.xml
turtle_ws/src/turtle_demo/launch/: turtle_demo_active_control_launch.py  turtle_demo_active_launch.py  turtle_demo_auto_active_control_launch.py  turtle_demo_auto_active_launch.py  turtle_demo_auto_control_launch.py  turtle_demo_auto_launch.py  turtle_demo_auto_predict_launch.py  turtle_demo_auto_test_launch.py  turtle_demo_control_launch.py  turtle_demo_launch.py
turtle_ws/src/turtle_demo/src/: turtle_BT.cpp  turtle_BT_predict.cpp  turtle_active_autopilot.cpp  turtle_autopilot.cpp  turtle_listener.cpp  turtle_monitor.cpp  turtle_service_handler.cpp  turtle_spawner.cpp  turtle_test.cpp  turtle_tf2_frame_publisher.cpp
